@@ -177,4 +177,3 @@ Utility Functions
  vec2mat
  qfunc
  qfuncinv
- marcumq
