@@ -1,6 +1,8 @@
 Summary of important user-visible changes for communications 1.1.1:
 -------------------------------------------------------------------
 
+ ** The function `marcumq' has been moved to the signal package
+
  ** The following functions are new:
 
       convenc
